@@ -1426,8 +1426,10 @@ int nsh_parse(FAR struct nsh_vtbl_s *vtbl, char *cmdline)
 
       /* Free the redirected output file path */
 
-      nsh_freefullpath(redirfile);
-      redirfile = NULL;
+      if (redirfile)
+        {
+          nsh_freefullpath(redirfile);
+        }
 
       /* Save the result:  success if 0; failure if 1 */
 
@@ -1467,8 +1469,10 @@ int nsh_parse(FAR struct nsh_vtbl_s *vtbl, char *cmdline)
 
       /* Free the redirected output file path */
 
-      nsh_freefullpath(redirfile);
-      redirfile = NULL;
+      if (redirfile)
+        {
+          nsh_freefullpath(redirfile);
+        }
 
       /* Save the result:  success if 0; failure if 1 */
 
@@ -1595,6 +1599,12 @@ int nsh_parse(FAR struct nsh_vtbl_s *vtbl, char *cmdline)
           nsh_release(bkgvtbl);
           goto errout;
         }
+
+      /* Detach from the pthread since we are not going to join with it.
+       * Otherwise, we would have a memory leak.
+       */
+
+      (void)pthread_detach(thread);
 
       nsh_output(vtbl, "%s [%d:%d]\n", cmd, thread, param.sched_priority);
     }
