@@ -511,4 +511,6 @@
 	* apps/builtin/exec_builtin.c:  Now uses task_spawn() to start
 	  builtin applications.
 	* Type of argv has changed from const char ** to char * const *
+	* apps/nshlib/nsh_parse.c:  Fix memory lead: Need to detach after
+	  creating a pthread.
 
